1. upgrade spring boot version 2. use kafka to replace ons